[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lens-reasoning-sdk"
version = "1.0.0"
description = "Python SDK for the Lens Reasoning System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TUPL Team", email = "support@tupl.xyz"}
]
keywords = ["ai", "reasoning", "lens", "artificial-intelligence", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://api.tupl.xyz"
Repository = "https://github.com/tupl-xyz/lens-reasoning-sdk"